--- a/GestioneFatture/src/config.properties
+++ b/GestioneFatture/src/config.properties
@@ -1,5 +1,6 @@
-#Crunchify Properties
-user=Crunchify
-company1=Google
-company2=eBay
-company3=Yahoo
+#database Properties
+server=127.0.0.1
+port=3306
+user=root
+password=root
+database=gestionefatture
