--- a/GestioneFatture/.classpath
+++ b/GestioneFatture/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="ext/mysql-connector-java-5.1.44-bin.jar"/>
-	<classpathentry kind="lib" path="ext/itextpdf-5.5.0.jar"/>
+	<classpathentry kind="lib" path="ext/itextpdf-5.5.0.jar" sourcepath="ext/itextpdf-5.5.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
