--- a/GestioneFatture/.classpath
+++ b/GestioneFatture/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="ext/mysql-connector-java-5.1.44-bin.jar"/>
 	<classpathentry kind="lib" path="ext/itextpdf-5.5.0.jar" sourcepath="ext/itextpdf-5.5.0.jar"/>
+	<classpathentry kind="lib" path="ext/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
